--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "marked": "0.8.2",
     "node-sass": "4.13.1",
     "null-loader": "3.0.0",
-    "parse-server": "github:parseplatform/parse-server#master",
+    "parse-server": "4.4.0",
     "path-to-regexp": "3.2.0",
     "puppeteer": "3.0.0",
     "react-test-renderer": "16.13.1",
